<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="5dp"
                android:text="@string/directions_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#99CCFF"
                android:textStyle="bold" 
                android:layout_alignParentTop="true" 
                android:id="@+id/titleTextView"/>
    
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollViewWrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_below="@+id/titleTextView" android:layout_above="@+id/footer" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/directions_step1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/directions_step2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/directions_step3"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/directions_step4"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/directions_step5"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/directions_step6"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/directions_step7"
                android:textAppearance="?android:attr/textAppearanceSmall" 
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/ppImageSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pp" 
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true" android:contentDescription="@string/directions_pp_image_cd"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/directions_ppimagefootertext"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:id="@+id/footer" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:orientation="vertical" android:layout_width="fill_parent">

        <ImageView
            android:id="@+id/dividerImg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="2dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dark" />

<Button
        android:id="@+id/mapsbutton"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/directions_buttontext">
    </Button>
    </LinearLayout>
</RelativeLayout>