<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#00a6e3" >

        <TextView
            android:id="@+id/dayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Phone Numbers"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:textStyle="bold" />
    </RelativeLayout>
    
    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header" >

       <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/cmTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="3dp"
                android:text="@string/phonenumbers_organisertitle"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#00a6e3"
                android:textStyle="bold" >
            </TextView>

            <RelativeLayout
                android:id="@+id/cmLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/cmName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="230dp"
                    android:text="@string/phonenumbers_organisername1"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </TextView>

                <TextView
                    android:id="@+id/cmPhoneNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="230dp"
                    android:layout_below="@+id/cmName"
                    android:text="@string/phonenumbers_organiserphone1"
                    android:textAppearance="?android:attr/textAppearanceSmall" >
                </TextView>

                <Button
                    android:id="@+id/cmCallButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/phonenumbers_callbuttontext" >
                </Button>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/emergencyServicesLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/emergencyServicesName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="30dp"
                    android:text="@string/phonenumbers_emergencyservices"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#00a6e3"
                    android:textStyle="bold"
                    android:width="230dp" >
                </TextView>

                <TextView
                    android:id="@+id/emergencyServicesPhone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/emergencyServicesName"
					android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/phonenumbers_emergencyphone"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </TextView>

                <Button
                    android:id="@+id/emergencyServicesCallButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/emergencyServicesName"
                    android:layout_marginLeft="80dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/phonenumbers_callbuttontext"
                    android:textColor="#ff0000" 
                    android:visibility="gone">
                </Button>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>



</RelativeLayout>